# nekoman_speak

./: CMakeLists.txt  LICENSE  README.md
include/: nekoman.hpp
nekoman/src/: nekoman.cpp
nekoman/test/: test_nekoman.cpp
